--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,15 +2,15 @@
 
 @font-face {
   font-family: "Druk";   /*Can be any text*/
-  src: local("Druk\ Wide\ Bold"),
-    url("../assets/fonts/Druk\ Wide\ Bold.ttf") format("truetype");
+  src: local("DrukWideBold"),
+    url("../public/fonts/DrukWideBold.ttf") format("truetype");
 }
 
 @font-face {
   font-family: 'Monaco';
   font-style: normal;
   font-weight: normal;
-  src: local('Monaco'), url('../assets/fonts/Monaco.woff') format('woff');
+  src: local('Monaco'), url('../public/fonts/Monaco.woff') format('woff');
 }
 
 html,
