--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,14 +3,14 @@
 @font-face {
   font-family: "Druk";   /*Can be any text*/
   src: local("DrukWideBold"),
-    url("../public/fonts/DrukWideBold.ttf") format("truetype");
+    url("/fonts/DrukWideBold.ttf") format("truetype");
 }
 
 @font-face {
   font-family: 'Monaco';
   font-style: normal;
   font-weight: normal;
-  src: local('Monaco'), url('../public/fonts/Monaco.woff') format('woff');
+  src: local('Monaco'), url('/fonts/Monaco.woff') format('woff');
 }
 
 html,
