--- a/components/Alumni/Alumni.module.css
+++ b/components/Alumni/Alumni.module.css
@@ -1,5 +1,5 @@
 .AlumniText {
-    font-family: 'Monaco';
+    font-family: 'Crimson';
     color: #696969;
     font-size: 24px;
 }
@@ -19,6 +19,8 @@
 .AlumniContainer {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 50px;
 }
 
 .AlumniLeft {
@@ -45,9 +47,7 @@
 }
 
 .arrowContainer {
-    width: 50%;
-    margin-top: 2.5%;
-    margin-left: 3%;
+    padding-left: 10px;
 }
 
 .AlumniRight {
@@ -66,6 +66,7 @@
     color: white;
     font-family: 'Druk';
     text-align: left;
+    margin-left: 10%;
 }
 
 .alumniImageContainer {
@@ -74,9 +75,63 @@
 }
 
 .AlumniCompanyContainer {
-    background: black;
     padding: 2%;
-    margin-top: 3%;
     height: 90%; 
     padding: 10%;
+    padding-left: 0;
+    margin-left: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 3%;
+    justify-content: space-between;
+}
+
+.CompanyContainer {
+    width: 22%;
+    text-align: center;
+    font-size: 12px;
+    padding: 2%;
+}
+
+.CompanyName {
+    color: white;
+}
+
+@media screen and (max-width: 700px) {
+    .AlumniLeft {
+        width: 100%;
+    }
+    
+    .alumniImageContainer {
+        width: 100%;
+    }
+
+    .AlumniBody {
+        width: 100%;
+    }
+
+    .AlumniHeading {
+        font-size: 28px;
+    }
+
+    .AlumniText {
+        font-size: 16px;
+    }
+
+    .AlumniRight {
+        width: 100%;
+    }
+
+    .checkoutContainer {
+        width: 100%;
+        font-size: 16px;
+    }
+
+    .AlumniCardHeading {
+        font-size: 16px;
+    }
+
+    .CompanyContainer {
+        font-size: 8px;
+    }
 }
