--- a/components/Events/Events.module.css
+++ b/components/Events/Events.module.css
@@ -6,27 +6,31 @@
 }
 
 .EventsText {
-    font-family: 'Monaco';
+    font-family: 'Crimson';
     color: #696969;
     font-size: 24px;
 }
 
 .EventsCardContainer {
-    padding-top: 5%;
+    margin-top: 5%;
     display: flex;
     flex-direction: row;
-    column-gap: 2%;
+    flex-wrap: wrap;
+    padding: 5%;
+    justify-content: space-between;
+    background: url(../../assets/images/mesh.png);
+    background-blend-mode: color-dodge;
 }
 
 .EventsCard {
-    width: 32%;
-    background: url(../../assets/images/card1bg.png);
+    width: 45%;
     background-size: cover;
-    border: 1px solid white;
+    border-bottom: 1px solid white;
     display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 5%;
+    flex-wrap: wrap;
+    margin: 2%;
+    flex-direction: row;
+    padding: 3%;
     row-gap: 30px;
 }
 
@@ -36,12 +40,19 @@
     font-size: 24px;
 }
 
+.EventsImageContainer {
+    width: 40%;
+}
+
 .EventsCardBody {
     font-family: 'Roboto', sans-serif;
     color: white;
-    text-align: center;
     margin-top: 5%;
     font-size: 20px;
+}
+
+.EventsContentContainer {
+    width: 60%;
 }
 
 .eventsImageContainer {
@@ -49,4 +60,14 @@
     align-self: center;
     padding: 10%;
     padding-bottom: 0;
+}
+
+@media screen and (max-width: 700px) {
+    .EventsCard {
+        width: 100%;
+    }
+
+    .EventsContentContainer {
+        width: 100%;
+    }
 }
