--- a/components/Joining/Joining.module.css
+++ b/components/Joining/Joining.module.css
@@ -13,7 +13,7 @@
 }
 
 .Joiningtext {
-    font-family: 'Monaco';
+    font-family: 'Crimson';
     color: #696969;
     font-size: 24px;
 }
@@ -32,6 +32,7 @@
     width: 85%;
     border-bottom: 1px #515151 solid;
     padding-bottom: 5%;
+    flex-wrap: wrap;
 }
 
 .JoiningCard {
@@ -43,21 +44,22 @@
     align-items: center;
     padding: 4%;
     row-gap: 20px;
+    background: #222222;
 }
 
 .JoiningCardHeading {
-    font-family: 'Monaco';
+    font-family: 'Crimson';
     font-size: 30px;
 }
 
 .JoiningCardBody {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'NeueHaasDisplay-Roman', sans-serif;
     font-size: 20px;
     text-align: center;
 }
 
 .JoiningListHeading {
-    font-family: 'Monaco';
+    font-family: 'NeueHaasDisplay-Roman', sans-serif;
     font-size: 24px;
 }
 
@@ -72,6 +74,7 @@
     flex-direction: row;
     column-gap: 10%;
     width: 80%;
+    flex-wrap: wrap;
     font-size: 19px;
 }
 
@@ -79,11 +82,77 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 45%;
     row-gap: 20px;
 }
 
 .joinAction {
-    font-size: 24px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 3%;
     margin-top: 2%;
+    border: 1px solid white;
+}
+
+.stayUp {
+    font-family: 'Druk';
+    font-size: 30px;
+    width: 60%;
+}
+
+.follow {
+    color: #EAAA00;
+    border: 1px solid #EAAA00;
+    font-size: 24px;
+    padding: 2%;
+}
+
+.yellow {
+    color: #EAAA00
+}
+
+@media screen and (max-width: 700px) {
+    .JoiningHeading {
+        width: 100%;
+        font-size: 28px;
+    }
+
+    .Joiningtext {
+        font-size: 16px;
+    }
+
+    .JoiningCard {
+        width: 100%;
+    }
+
+    .JoiningCardContainer {
+        width: 100%;
+        row-gap: 30px;
+    }
+
+    .Joining {
+        padding: 10%;
+    }
+
+    .JoiningList {
+        width: 100%;
+        text-align: center;
+    }
+
+    .stayUp {
+        font-size: 24px;
+        width: 100%;
+    }
+
+    .follow {
+        font-size: 20px;
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    .joinAction {
+        padding: 5%;
+    }
 }
