--- a/components/Partnering/Partnering.module.css
+++ b/components/Partnering/Partnering.module.css
@@ -36,3 +36,10 @@
     padding-top: 10%;
     padding-bottom: 10%;
 }
+
+@media screen and (max-width: 700px) {
+    .Partnering {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+}
