--- a/components/Sponsors/Sponsors.module.css
+++ b/components/Sponsors/Sponsors.module.css
@@ -11,3 +11,9 @@
     padding-top: 0;
     padding-bottom: 5%;
 }
+
+@media screen and (max-width: 700px) {
+    .SponsorsText {
+        font-size: 16px;
+    }
+}
