--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap');
 @font-face {
   font-family: "Druk";   /*Can be any text*/
   src: local("DrukWideBold"),
@@ -7,18 +7,24 @@
 }
 
 @font-face {
-  font-family: 'Monaco';
+  font-family: 'Crimson';
   font-style: normal;
   font-weight: normal;
-  src: local('Monaco'), url('/fonts/Monaco.woff') format('woff');
+  src: local('Crimson-Roman'), url('/fonts/Crimson-Roman.otf') format('otf');
+}
+
+@font-face {
+  font-family: 'NeueHaasDisplay-Roman';
+  font-style: normal;
+  font-weight: normal;
+  src: local('NeueHaasDisplay-Roman'), url('/fonts/NeueHaasDisplayRoman.ttf') format('ttf');
 }
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'NeueHaasDisplay-Roman', sans-serif;
   overflow-x: hidden;
   background: #111111;
   overflow: overlay;
