--- a/components/Joining/Joining.module.css
+++ b/components/Joining/Joining.module.css
@@ -107,6 +107,7 @@
     border: 1px solid #EAAA00;
     font-size: 24px;
     padding: 2%;
+    cursor: pointer;
 }
 
 .yellow {
@@ -150,6 +151,7 @@
         font-size: 20px;
         width: 100%;
         margin-top: 30px;
+        cursor: pointer;
     }
 
     .joinAction {
