--- a/components/MailingList/MailingList.module.css
+++ b/components/MailingList/MailingList.module.css
@@ -22,6 +22,7 @@
     color: #EAAA00;
     border: 1px solid #EAAA00;
     padding: 2% 4% 2% 4%;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 700px) {
