--- a/components/MailingList/MailingList.module.css
+++ b/components/MailingList/MailingList.module.css
@@ -21,8 +21,9 @@
     font-family: 'NeueHaasDisplay-Roman', sans-serif;
     color: #EAAA00;
     border: 1px solid #EAAA00;
-    padding: 2% 4% 2% 4%;
+    padding: 2% 6% 2% 6%;
     cursor: pointer;
+    border-radius: 4px;
 }
 
 @media screen and (max-width: 700px) {
