--- a/components/Alumni/Alumni.module.css
+++ b/components/Alumni/Alumni.module.css
@@ -28,6 +28,9 @@
 }
 
 .AlumniBody {
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 200;
+    font-style: normal;
     color: white;
     font-size: 24px;
     margin-top: 1%;
@@ -39,6 +42,9 @@
     margin-top: 2%;
     font-size: 24px;
     cursor: pointer;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 .checkoutContainer {
@@ -82,6 +88,9 @@
     padding-left: 0;
     margin-left: 10%;
     display: flex;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 100;
+    font-style: normal;
     flex-wrap: wrap;
     column-gap: 3%;
     justify-content: space-between;
