--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -16,6 +16,9 @@
     margin-left: 10%;
     padding-bottom: 10%;
     padding-top: 5%;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 200;
+    font-style: normal;
 }
 
 .HeroHeading {
@@ -44,7 +47,9 @@
 
 
 .HeroBody {
-    font-family: 'NeueHaasDisplay-Roman', sans-serif;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 200;
+    font-style: normal;
     color: white;
     font-size: 30px;
     padding-top: 2%;
