--- a/components/Joining/Joining.module.css
+++ b/components/Joining/Joining.module.css
@@ -53,20 +53,25 @@
 }
 
 .JoiningCardBody {
-    font-family: 'NeueHaasDisplay-Roman', sans-serif;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 200;
+    font-style: normal;
     font-size: 20px;
     text-align: center;
 }
 
 .JoiningListHeading {
-    font-family: 'NeueHaasDisplay-Roman', sans-serif;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 200;
+    font-style: normal;
     font-size: 24px;
 }
 
 .JoiningListSubheading {
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 900;
+    font-style: normal;
+    font-size: 20px;
 }
 
 .JoiningListContainer {
@@ -82,6 +87,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 200;
+    font-style: normal;
     width: 45%;
     row-gap: 20px;
 }
@@ -94,6 +102,7 @@
     padding: 3%;
     margin-top: 2%;
     border: 1px solid white;
+    border-radius: 4px;
 }
 
 .stayUp {
@@ -107,6 +116,12 @@
     border: 1px solid #EAAA00;
     font-size: 24px;
     padding: 2%;
+
+    border-radius: 4px;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    
     cursor: pointer;
 }
 
