--- a/components/Partnering/Partnering.module.css
+++ b/components/Partnering/Partnering.module.css
@@ -4,7 +4,9 @@
     padding-left: 25%;
     padding-right: 25%;
     color: white;
-    font-family: 'Roboto';
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 200;
+    font-style: normal;
     row-gap: 50px;
 }
 
@@ -15,12 +17,12 @@
 
 .PartneringSubHeading {
     font-size: 28px;
-    font-weight: 800;
+    font-weight: 600;
 }
 
 .PartneringSubSubHeading {
     color: #EAAA00;
-    font-weight: 800;
+    font-weight: 700;
     font-size: 28px;
 }
 
