--- a/components/Events/Events.module.css
+++ b/components/Events/Events.module.css
@@ -8,7 +8,7 @@
 .EventsText {
     font-family: 'Crimson';
     color: #696969;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .EventsCardContainer {
@@ -50,7 +50,7 @@
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 200;
     font-style: normal;
-    
+    line-height: 150%;
     color: white;
     margin-top: 5%;
     font-size: 20px;
