--- a/components/Joining/Joining.module.css
+++ b/components/Joining/Joining.module.css
@@ -15,12 +15,13 @@
 .Joiningtext {
     font-family: 'Crimson';
     color: #696969;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .JoiningHeading {
     font-size: 50px;
     font-family: 'Druk';
+    line-height: 150%;
     text-align: center;
     width: 70%;
 }
@@ -57,6 +58,7 @@
     font-weight: 200;
     font-style: normal;
     font-size: 20px;
+    line-height: 150%;
     text-align: center;
 }
 
@@ -69,7 +71,7 @@
 
 .JoiningListSubheading {
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
-    font-weight: 900;
+    font-weight: 600;
     font-style: normal;
     font-size: 20px;
 }
@@ -90,6 +92,7 @@
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 200;
     font-style: normal;
+    line-height: 150%;
     width: 45%;
     row-gap: 20px;
 }
@@ -108,13 +111,14 @@
 .stayUp {
     font-family: 'Druk';
     font-size: 30px;
+    line-height: 125%;
     width: 60%;
 }
 
 .follow {
     color: #EAAA00;
     border: 1px solid #EAAA00;
-    font-size: 24px;
+    font-size: 20px;
     padding: 2%;
 
     border-radius: 4px;
