--- a/components/WhatsHappening/WhatsHappening.module.css
+++ b/components/WhatsHappening/WhatsHappening.module.css
@@ -12,12 +12,13 @@
 .WhatsHappeningText {
     font-family: 'Crimson';
     color: #696969;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .WhatsHappeningHeading {
     font-family: 'Druk';
-    font-size: 50px;
+    font-size: 36px;
+    line-height: 125%;
     color: white;
 }
 
@@ -59,6 +60,7 @@
     font-weight: 200;
     font-style: normal;
     font-size: 20px;
+    line-height: 150%;
 }
 
 .WhatsHappeningCardLearn {
