slight tweak to gradient

--- a/components/Alumni/Alumni.module.css
+++ b/components/Alumni/Alumni.module.css
@@ -1,7 +1,7 @@
 .AlumniText {
     font-family: 'Crimson';
     color: #696969;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .Alumni {
@@ -31,6 +31,7 @@
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 200;
     font-style: normal;
+    line-height: 150%;
     color: white;
     font-size: 24px;
     margin-top: 1%;
