--- a/components/FAQ/FAQ.module.css
+++ b/components/FAQ/FAQ.module.css
@@ -11,15 +11,16 @@
 }
 
 .FAQHeading {
-    font-size: 40px;
+    font-size: 36px;
     font-family: 'Druk';
 }
 
 .Question {
-    font-weight: 700;
-    font-size: 26px;
+    font-weight: 600;
+    font-size: 24px;
 }
 
 .Answer {
-    font-size: 22px;
+    font-size: 20px;
+    line-height: 150%;
 }
