--- a/components/AboutUs/AboutUs.module.css
+++ b/components/AboutUs/AboutUs.module.css
@@ -52,6 +52,11 @@
     font-weight: 700;
     padding-right: 2%;
     cursor: pointer;
+    transition: 0.3s;
+}
+
+.eventLink:hover {
+    color: #fff;
 }
 
 .eventLinkContainer {
