--- a/components/MailingList/MailingList.module.css
+++ b/components/MailingList/MailingList.module.css
@@ -26,6 +26,12 @@
     padding: 1.5% 7% 1.5% 7%;
     cursor: pointer;
     border-radius: 4px;
+    transition: 0.3s;
+}
+
+.signUpMailingList:hover {
+    background-color: #EAAA00;
+    color: #fff;
 }
 
 @media screen and (max-width: 700px) {
