--- a/components/ExecBoard/ExecBoard.module.css
+++ b/components/ExecBoard/ExecBoard.module.css
@@ -45,11 +45,20 @@
     margin-top: 4%;
 }
 
+.ExecBoardCardTitle  {
+    color: #fff;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    font-style: normal;
+}
+
 .ExecBoardCardEmail  {
     color: #EAAA00;
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 200;
     font-style: normal;
+    padding-top: 20px;
 }
 
 .ExecBoardTitle {
@@ -59,7 +68,7 @@
     height: 30px;
     margin-top: -15px;
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
 }
 
