changed footer line shading

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -8,7 +8,7 @@
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 200;
     font-style: normal;
-    border-top: 1px solid white;
+    /* border-top: 1px solid 696969; */
 }
 
 .FooterContent {
