--- a/components/Joining/Joining.module.css
+++ b/components/Joining/Joining.module.css
@@ -104,7 +104,7 @@
     justify-content: center;
     padding: 3%;
     margin-top: 2%;
-    border: 1px solid white;
+    border: 1px solid #696969;
     border-radius: 4px;
 }
 
