fixed current sponsors font

--- a/components/CurrentPartners/CurrentPartners.module.css
+++ b/components/CurrentPartners/CurrentPartners.module.css
@@ -7,7 +7,7 @@
 }
 
 .CurrentPartnersText {
-    font-family: 'Monaco';
+    font-family: 'Crimson';
     font-size: 18px;
     color: #696969;
     margin-bottom: 40px;
