--- a/components/CurrentPartners/CurrentPartners.module.css
+++ b/components/CurrentPartners/CurrentPartners.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding: 10%;
-    border-bottom: 2px solid white;
+    border-bottom: 1px solid #696969;
 }
 
 .CurrentPartnersText {
