Evevnts UI change

--- a/components/Events/Events.module.css
+++ b/components/Events/Events.module.css
@@ -16,21 +16,23 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 5%;
-    justify-content: space-between;
+    justify-content: center;
+    padding: 3%;
     background: url(../../assets/images/mesh.png);
     background-blend-mode: color-dodge;
+    text-align: center;
 }
 
 .EventsCard {
-    width: 45%;
+    width: 29%;
     background-size: cover;
-    border-bottom: 1px solid white;
     display: flex;
     flex-wrap: wrap;
     margin: 2%;
-    flex-direction: row;
+    align-items: center;
+    flex-direction: column;
     padding: 3%;
+    min-width: 300px;
     row-gap: 30px;
 }
 
@@ -45,8 +47,6 @@
 }
 
 .EventsCardBody {
-
-
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 200;
     font-style: normal;
@@ -56,10 +56,6 @@
     font-size: 20px;
 }
 
-.EventsContentContainer {
-    width: 60%;
-}
-
 .eventsImageContainer {
     justify-self: center;
     align-self: center;
@@ -67,12 +63,40 @@
     padding-bottom: 0;
 }
 
-@media screen and (max-width: 700px) {
+.Joiningtext {
+    font-family: 'Crimson';
+    color: #696969;
+    font-size: 18px;
+    text-align: center;
+}
+
+.JoiningHeading {
+    font-size: 36px;
+    font-family: 'Druk';
+    line-height: 150%;
+    text-align: center;
+    width: 50%;
+    color: white;
+    text-align: center;
+}
+
+.JoiningHeadingContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+@media screen and (max-width: 860px) {
     .EventsCard {
         width: 100%;
     }
 
     .EventsContentContainer {
         width: 100%;
+    }
+
+    .JoiningHeading {
+        width: 100%;
+        font-size: 28px;
     }
 }
