--- a/components/Joining/Joining.module.css
+++ b/components/Joining/Joining.module.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     row-gap: 30px;
     background: #111111;
-    padding: 15%;
+    padding: 10%;
     padding-top: 0;
-    padding-bottom: 10%;
+    padding-bottom: 5%;
     margin-top: 0;
     justify-content: center;
     align-items: center;
@@ -29,8 +29,10 @@
 .JoiningCardContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 85%;
+    justify-content: center;
+    column-gap: 30px;
+    row-gap: 30px;
+    width: 95%;
     border-bottom: 1px #515151 solid;
     padding-bottom: 5%;
     flex-wrap: wrap;
@@ -39,18 +41,42 @@
 .JoiningCard {
     border: 1px solid #515151;
     border-radius: 4px;
-    width: 49%;
+    width: 30%;
+    height: auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 4%;
-    row-gap: 20px;
     background: #222222;
+    min-width: 300px;
+}
+
+.JoiningCardImageContainer {
+    width: 100%;
+    height: 350px;
+    position: relative;
+    overflow: hidden;
+
 }
 
 .JoiningCardHeading {
     font-family: 'Crimson';
     font-size: 30px;
+}
+
+
+.JoiningCardSubHeading {
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-size: 24px;
+    color: #EAAA00;
+}
+
+.JoiningCardContentUpper {
+    padding: 8%;
+    border-bottom: 2px solid #515151;
+}
+
+.JoiningCardContentLower {
+    padding: 8%;
+    font-size: 22px;
 }
 
 .JoiningCardBody {
@@ -83,18 +109,6 @@
     width: 80%;
     flex-wrap: wrap;
     font-size: 19px;
-}
-
-.JoiningList {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
-    font-weight: 200;
-    font-style: normal;
-    line-height: 150%;
-    width: 45%;
-    row-gap: 20px;
 }
 
 .joinAction {
@@ -155,6 +169,10 @@
     .JoiningCardContainer {
         width: 100%;
         row-gap: 30px;
+    }
+
+    .JoiningCardImageContainer {
+        height: 250px;
     }
 
     .Joining {
