--- a/components/Joining/Joining.module.css
+++ b/components/Joining/Joining.module.css
@@ -51,7 +51,7 @@
 
 .JoiningCardImageContainer {
     width: 100%;
-    height: 350px;
+    height: 275px;
     position: relative;
     overflow: hidden;
 
@@ -59,13 +59,13 @@
 
 .JoiningCardHeading {
     font-family: 'Crimson';
-    font-size: 30px;
+    font-size: 24px;
 }
 
 
 .JoiningCardSubHeading {
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
-    font-size: 24px;
+    font-size: 21px;
     color: #EAAA00;
 }
 
@@ -77,6 +77,11 @@
 .JoiningCardContentLower {
     padding: 8%;
     font-size: 22px;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 20px;
+    line-height: 150%;
 }
 
 .JoiningCardBody {
