--- a/components/WhatsHappening/WhatsHappening.module.css
+++ b/components/WhatsHappening/WhatsHappening.module.css
@@ -70,10 +70,11 @@
     font-style: normal;
     color: #EAAA00;
     border: 1px solid #EAAA00;
-    padding: 2%;
+    padding: 4%;
     width: 50%;
     text-align: center;
-    border-radius: 4px;
+    border-radius: 40px;
+    height: 45px;
     cursor: pointer;
     transition: 0.3s;
 }
