modified letter spacing

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -83,7 +83,7 @@
 }
 
 .FooterFooter {
-    font-family: 'Monaco';
+    font-family: 'Crimson';
     color: #7F7F7F;
     font-size: 18px;
     align-items: center;
