--- a/components/Home/Events/Events.module.css
+++ b/components/Home/Events/Events.module.css
@@ -18,7 +18,7 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 3%;
-    background: url(../../assets/images/mesh.png);
+    background: url(../../../assets/images/mesh.png);
     background-blend-mode: color-dodge;
     text-align: center;
 }
