--- a/components/About/ExecBoard/ExecBoard.module.css
+++ b/components/About/ExecBoard/ExecBoard.module.css
@@ -12,14 +12,39 @@
     font-size: 18px;
 }
 
+.ExecBoardHeading {
+    font-family: 'Druk';
+    font-size: 36px;
+    color: white;
+    margin-top: 1%;
+    padding-bottom: 1%;
+    text-align: center;
+}
+
 .ExecBoardContainer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    padding-top: 5%;
+    padding-top: 3%;
     column-gap: 2%;
     row-gap: 40px;
+    padding-bottom: 60px;
+
+}
+
+.ExecBoardExecDirContainer {
+    padding-left: 26%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 130%;
+    padding-top: 3%;
+    column-gap: 2%;
+    row-gap: 40px;
+    padding-bottom: 60px;
 }
 
 .ExecBoardCard {
@@ -43,6 +68,7 @@
     font-family: 'Crimson';
     font-size: 20px;
     margin-top: 4%;
+    margin-bottom: 2%;
 }
 
 .ExecBoardCardTitle  {
@@ -51,6 +77,7 @@
     font-weight: 500;
     font-size: 14px;
     font-style: normal;
+    text-align: center;
 }
 
 .ExecBoardCardEmail  {
@@ -79,5 +106,14 @@
 
     .ExecBoardCard {
         width: 100%;
+    }
+    .ExecBoardExecDirContainer {
+        padding-right:  26%;
+
+
+        width: 120%;
+        padding-top: 5%;
+        column-gap: 1%;
+        row-gap: 30px;
     }
 }
