--- a/components/About/FAQ/FAQ.module.css
+++ b/components/About/FAQ/FAQ.module.css
@@ -1,56 +1,81 @@
-.Partnering {
-    display: flex;
-    flex-direction: column;
-    padding-left: 25%;
-    padding-right: 25%;
+.FAQ {
+    padding: 12%;
+    padding-top: 0;
     color: white;
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 200;
     font-style: normal;
-    row-gap: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+
+ .FAQText {
+    font-family: 'Crimson';
+    color: #696969;
+    font-size: 18px;
+}
+.FAQContainer {
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 110%;
+    padding-top: 3%;
+    column-gap: 2%;
+    row-gap: 90px;
+    padding-bottom: 60px;
+
 }
 
-.PartneringHeading {
+.FAQCard {
+    width: 32%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.FAQContainer {
+    display: flex;
+    color: white;
+    flex-direction: row;
+    align-items: center;
+    padding: 8%;
+}
+.FAQHeading {
     font-size: 36px;
     font-family: 'Druk';
+    text-align: center;
 }
 
-.PartneringSubHeading {
-    font-size: 24px;
+.Question {
     font-weight: 600;
+    font-size: 24px;
+    text-align: left;
+    margin-bottom: 30px;
 }
 
-.PartneringSubSubHeading {
-    color: #EAAA00;
-    font-weight: 600;
-    font-size: 24px;
-}
-.AlumniDesc {
-    padding-left: 22%;
-    margin-top: -3%;
-    flex-direction: column;
-    row-gap: 20px;
+.Answer {
+    text-align: left;
     font-size: 21px;
     line-height: 150%;
 }
 
-.PartneringBody {
-    font-size: 24px;
-    line-height: 150%;
-}
-
-.yellow {
-    color: #EAAA00;
-}
-
-.PartneringImage {
-    padding-top: 10%;
-    padding-bottom: 10%;
-}
-
 @media screen and (max-width: 700px) {
-    .Partnering {
-        padding-left: 10%;
-        padding-right: 10%;
+    .FAQContainer {
+        flex-direction: column;
     }
+    .FAQHeading {
+        text-align: center;
+    }
+    .Question{
+        text-align: center;
+
+    }
+    .FAQCard {
+        width: 95%;
+        flex-direction: column;
+    }
+
 }
