--- a/components/About/ExecBoard/ExecBoard.module.css
+++ b/components/About/ExecBoard/ExecBoard.module.css
@@ -34,17 +34,24 @@
 }
 
 .ExecBoardExecDirContainer {
-    padding-left: 54%;
-
     display: flex;
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    width: 180%;
+    width: 100%;
     padding-top: 3%;
-    column-gap: 2%;
+    column-gap: 4%;
     row-gap: 40px;
     padding-bottom: 60px;
+}
+
+.ExecBoardExecDirCard {
+    width: 30%;
+    border: 1px solid #515151;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .ExecBoardCard {
@@ -64,10 +71,20 @@
     padding: 10%;
 }
 
+.ExecBoardCardImageContainer {
+    width: 150px;
+    height: 150px;
+}
+
+.ExecDirCardImageContainer {
+    width: 179px;
+    height: 179px;
+}
+
 .ExecBoardCardName {
     font-family: 'Crimson';
     font-size: 20px;
-    margin-top: 4%;
+    margin-top: 7%;
     margin-bottom: 2%;
 }
 
@@ -85,6 +102,7 @@
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 200;
     font-style: normal;
+    font-size: 12px;
     padding-top: 20px;
 }
 
