added alumni news

--- a/components/About/ContactHero/ContactHero.module.css
+++ b/components/About/ContactHero/ContactHero.module.css
@@ -4,9 +4,9 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-top: 0;
+    padding-top: 0%;
     flex-wrap: wrap;
-    row-gap: 50px;
+    row-gap: 5px;
     color: white;
 }
 
