--- a/components/About/FAQ/FAQ.module.css
+++ b/components/About/FAQ/FAQ.module.css
@@ -1,5 +1,5 @@
 .FAQ {
-    padding: 12%;
+    padding: 0 12% 4% 12%;
     padding-top: 0;
     color: white;
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
@@ -25,7 +25,7 @@
     padding-top: 3%;
     column-gap: 2%;
     row-gap: 90px;
-    padding-bottom: 60px;
+    padding-bottom: 10px;
 
 }
 
