--- a/components/Alumni/ColumnText/ColumnText.module.css
+++ b/components/Alumni/ColumnText/ColumnText.module.css
@@ -1,8 +1,8 @@
 .Partnering {
     display: flex;
     flex-direction: column;
-    padding-left: 25%;
-    padding-right: 25%;
+    padding-left: 20%;
+    padding-right: 20%;
     color: white;
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 200;
@@ -10,20 +10,32 @@
     row-gap: 50px;
 }
 
-.PartneringHeading {
-    font-size: 36px;
-    font-family: 'Druk';
+.AlumniText {
+    font-family: 'Crimson';
+    color: #696969;
+    font-size: 18px;
+    text-align: center;
 }
 
-.PartneringSubHeading {
-    font-size: 24px;
+.AlumniHeading {
+    padding-left: 13%;
+    padding-right: 13%;
+    font-size: 36px;
+    font-family: 'Druk';
+    text-align: center;
+}
+
+.AlumniSubHeading {
+    font-size: 21px;
     font-weight: 600;
+    text-align: center;
+
 }
 
 .PartneringSubSubHeading {
     color: #EAAA00;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 21px;
 }
 .AlumniDesc {
     padding-left: 22%;
