--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -22,7 +22,7 @@
 .FooterList {
     display: flex;
     flex-direction: column;
-    width: 20%;
+    width: 21%;
     row-gap: 10px;
 }
 
@@ -44,13 +44,14 @@
 }
 
 .FooterListHeading {
+    font-family: 'Crimson';
     font-weight: 500;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .FooterListLink {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
     cursor: pointer;
 }
 
@@ -60,7 +61,7 @@
 
 .FooterListHeading {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .FooterLink {
@@ -74,7 +75,7 @@
 
 .FooterListItem {
     cursor: pointer;
-    font-size: 18px;
+    font-size: 16px;
     transition: 0.3s;
 }
 
@@ -116,12 +117,13 @@
 
 .SocialIcons {
     word-spacing: 10px;
-    font-size: 20px;
     display: flex;
     column-gap: 10px;
 }
 
 .socialIcon {
+    opacity: 0.8;
+    width: 20px;
     cursor: pointer;
     transition: 0.3s;
 }
@@ -148,11 +150,11 @@
     font-weight: 200;
     border: 0.5px white solid;
     font-style: normal;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     row-gap: 10px;
     justify-content: center;
-    height: 80px;
+    height: 45px;
     border-radius: 100px;
     cursor: pointer;
 }
