--- a/components/Alumni/CompanyLogos/CompanyLogos.module.css
+++ b/components/Alumni/CompanyLogos/CompanyLogos.module.css
@@ -12,3 +12,12 @@
     color: #696969;
     margin-bottom: 40px;
 }
+
+.YearText {
+    color: #A1A1A1;
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+    font-weight: 100;
+    font-style: normal;
+    margin-bottom: 40px;
+
+}
