--- a/components/Home/AboutUs/AboutUs.module.css
+++ b/components/Home/AboutUs/AboutUs.module.css
@@ -1,36 +1,48 @@
 .AboutUs {
     background: #111111;
     color: white;
-    padding: 10%;
+    padding: 5% 10% 10% 10%;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 200;
     font-style: normal;
 }
 
-.AboutUsLeft {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-}
 
 .AboutUsHeading {
+
     font-family: 'Druk';
     font-size: 32px;
+    padding-right: 30%;
+    padding-bottom: 20px;
 }
 
 .AboutUsBody {
     line-height: 150%;
     font-size: 21px;
+    width: 50%;
+    float: left;
+    padding-right:120px;
+
+
+}
+.AboutUsBodyRight {
+    padding-left: 22%;
+    margin-top: -3%;
+    flex-direction: column;
+    row-gap: 20px;
+    font-size: 21px;
+    line-height: 150%;
 }
 
 .AboutUsText {
     font-family: 'Crimson';
     color: #696969;
     font-size: 18px;
+    padding-bottom: 20px;
+
 }
 
 .AboutUsRight {
@@ -47,7 +59,7 @@
 }
 
 .eventLink {
-    font-size: 20px;
+    font-size: 18px;
     color: #F2B111;
     font-weight: 700;
     padding-right: 2%;
@@ -67,7 +79,7 @@
 }
 
 .arrowContainer {
-    padding-right: 10px;
+    padding-left: 10px;
 }
 
 @media screen and (max-width: 700px) {
