--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -8,7 +8,8 @@
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 200;
     font-style: normal;
-    /* border-top: 1px solid 696969; */
+    border-top: 1px solid #696969;
+
 }
 
 .FooterContent {
@@ -40,7 +41,8 @@
 }
 
 .FooterLogo {
-    width: 50%;
+    width: 40%;
+    padding-bottom: 2%;
 }
 
 .FooterListHeading {
@@ -53,6 +55,8 @@
     font-weight: 600;
     font-size: 16px;
     cursor: pointer;
+    transition: 0.3s;
+
 }
 
 .FooterListLink:hover {
@@ -62,6 +66,7 @@
 .FooterListHeading {
     font-weight: 600;
     font-size: 16px;
+    color: #a3a3a3;
 }
 
 .FooterLink {
@@ -109,6 +114,7 @@
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 600;
     font-style: normal;
+    color: #fff;
 }
 
 .reverseArrow {
