--- a/components/Home/Alumni/Alumni.module.css
+++ b/components/Home/Alumni/Alumni.module.css
@@ -41,11 +41,16 @@
 .AlumniCheckout {
     color:#F2B111;
     margin-top: 2%;
-    font-size: 24px;
+    font-size: 18px;
     cursor: pointer;
     font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     font-weight: 700;
+    transition: 0.3s;
     font-style: normal;
+}
+
+.AlumniCheckout:hover {
+    color:#Fff;
 }
 
 .checkoutContainer {
@@ -75,6 +80,13 @@
     font-family: 'Druk';
     text-align: left;
     margin-left: 10%;
+}
+
+.AlumniCardText {
+    font-size: 16px;
+    color: #A1A1A1;
+    font-family: 'Crimson';
+    text-align: center;
 }
 
 .alumniImageContainer {
