--- a/components/Home/Sponsors/Sponsors.module.css
+++ b/components/Home/Sponsors/Sponsors.module.css
@@ -25,7 +25,7 @@
 }
 
 .eventLink {
-    font-size: 20px;
+    font-size: 18px;
     color: #F2B111;
     font-weight: 700;
     padding-right: 2%;
@@ -41,7 +41,7 @@
 }
 
 .arrowContainer {
-    padding-right: 10px;
+    padding-left: 10px;
 }
 @media screen and (max-width: 700px) {
     .SponsorsText {
