--- a/components/Home/WhatsHappening/WhatsHappening.module.css
+++ b/components/Home/WhatsHappening/WhatsHappening.module.css
@@ -2,9 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 10%;
-    padding-top: 0;
-    padding-bottom: 5%;
+    padding:8% 10% 5% 10%;
     flex-wrap: wrap;
     background: #111111;
 }
@@ -71,7 +69,7 @@
     color: #EAAA00;
     border: 1px solid #EAAA00;
     padding: 4%;
-    width: 50%;
+    width: 40%;
     text-align: center;
     border-radius: 40px;
     height: 45px;
