--- a/components/Home/Sponsors/Sponsors.module.css
+++ b/components/Home/Sponsors/Sponsors.module.css
@@ -48,3 +48,8 @@
         font-size: 16px;
     }
 }
+@media screen and (max-width: 390px) {
+    .SponsorsHeading {
+        font-size: 24px;
+    }
+}
